# wxc_callcontrol

./: .env (sample)  .gitignore  Dockerfile  LICENSE  Pipfile  Procfile  README.md  README.rst  docker-compose.yml  event_monitor.py  integration.py  list_user.py  ngrokhelper.py  pyproject.toml  requirements.txt  start_redis.sh  tokens.py  user_context.py  wx_simple_api.py  wxc_cc_bot.py
docs/: conf.py  credentials.rst  docker.rst  heroku.rst  index.rst  integration.rst  local.rst  modules.rst  ngrokhelper.rst  the_bot.rst  tokens.rst  user_context.rst  webex_simple_api.rst  wxc_cc_bot.rst
examples/: us_holidays.py
ngrok/: Dockerfile  ngrok.yml
script/: README.md  build  clean
test/: base.py  test_person_settings.py  test_telephony_paging.py  test_telephony_schedule.py  test_tokens.py
webex_simple_api/: __init__.py  api_child.py  base.py  licenses.py  locations.py  people.py  person_settings.py  rest.py  telephony.py  webhook.py
webex_simple_api/person_settings/: __init__.py  call_recording.py  caller_id.py  dnd.py
webex_simple_api/telephony/: __init__.py  calls.py  hg_and_cq.py  huntgroup.py  paging.py  schedules.py
webex_simple_api/telephony/callqueue/: __init__.py  announcement.py
