[tool.poetry]
name = "wxc_callcontrol"
version = "0.1.0"
description = "A minimal bot to play with the Webex Calling Call Control APIs"
authors = ["Johannes Krohn <johannes.krohn@krohns.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.19.2"
Flask = "^2.0.3"
webexteamsbot = "^0.1.4"
PyYAML = "^6.0"
requests = "^2.27.1"
pytz = "^2021.3"
webexteamssdk = "^1.6"
gunicorn = "^20.1.0"
redis = "^4.1.4"
wxc-sdk = "^0.2.0"
backoff = "^1.11.1"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
