[tool.poetry]
name = "wxc_callcontrol"
version = "0.1.0"
description = "A minimal bot to play with the Webex Calling Call Control APIs"
authors = ["Johannes Krohn <johannes.krohn@krohns.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.20.0"
Flask = "^2.0.3"
webexteamsbot = "^0.1.4"
PyYAML = "^6.0"
requests = "^2.27.1"
pytz = "^2022.1"
webexteamssdk = "^1.6"
gunicorn = "^20.1.0"
redis = "^4.1.4"
backoff = "^1.11.1"
pydantic = "^1.9.0"
wxc_sdk = "^0.4.0"

[tool.poetry.dev-dependencies]
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
